--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,25 @@
 {
 	"useTabs": true,
 	"singleQuote": true,
-	"trailingComma": "none",
+	"trailingComma": "all",
 	"printWidth": 100,
+	"semi": true,
+	"bracketSpacing": true,
+	"arrowParens": "always",
+	"endOfLine": "lf",
+	"tabWidth": 2,
 	"plugins": ["prettier-plugin-svelte"],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"overrides": [
+		{
+			"files": "*.svelte",
+			"options": {
+				"parser": "svelte",
+				"svelteSortOrder": "scripts-styles-markup",
+				"svelteStrictMode": true,
+				"svelteBracketNewLine": true,
+				"svelteAllowShorthand": true,
+				"svelteIndentScriptAndStyle": true
+			}
+		}
+	]
 }
